--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -34,12 +34,12 @@ releaseNotes: >-
   - Full release notes are found at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/
 
 
-  In case you missed it, our previous release of the Lightning Node app (v0.17.0-beta) brought the option to run your node in hybrid mode or Tor-only mode, along with the ability to open private channels, receive keysend payments, bugfixes, and more!
+  🔔 In case you missed it, our previous release of the Lightning Node app (v0.17.0-beta) brought the option to run your node in hybrid mode or Tor-only mode, along with the ability to open private channels, receive keysend payments, bugfixes, and more!
 
 
   - Hybrid mode allows your node to make connections to peers (other nodes) over both Tor and clearnet, enhancing both latency and connection stability. This is enabled by default for new users, while existing users can activate it in Advanced Settings.
   
-  
+
   - You can now now choose to open private channels, which offer increased privacy but limited routing capabilities compared to public channels.
 developer: Umbrel
 website: https://umbrel.com
