Update Rotki to 1.31.0

--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: rotki
 category: finance
 name: rotki
-version: "1.30.1"
+version: "1.31.0"
 tagline: Portfolio tracking, analytics, accounting and tax reporting
 description: >-
   rotki is an open source portfolio tracking, analytics, accounting and tax reporting tool that protects your privacy. 
@@ -25,11 +25,10 @@ repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
 releaseNotes: >-
-  rotki v1.30.1 is a small patch release on top of 1.30.0 fixing some of the bugs our users found in the last week.
-  Most important bug fixed here is the fix for the ability to push the DB backup to the server for premium users. 
+  rotki v1.31.0 is a gigantic release containing all the work that the team has been preparing in the last 3 months! 
+  The biggest features coming in this release are support for Gnosis chain, support for Base chain, Velodrome support, a UI redesign but also a lot of smaller improvements and new protocol decoders for history events such as graph, ethereum attestation service and more!
   
-
-  Full release notes and changes from previous versions can be found here: https://github.com/rotki/rotki/releases/tag/v1.30.1
+  Full release notes and changes from previous versions can be found here: https://github.com/rotki/rotki/releases
 gallery:
   - 1.jpg
   - 2.jpg
