--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "2.14.0"
+version: "2.27.1"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,32 +31,17 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This release upgrades Ghostfolio from v1.287.0 to v2.14.0, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
+  This release upgrades Ghostfolio from v2.14.0 to v2.27.1, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
   
-
-  Added:
-
-    - Added the OpenFIGI data enhancer for Financial Instrument Global Identifier (FIGI)
-    - Added figi, figiComposite and figiShareClass to the asset profile model
 
   Changed:
 
-    - Moved the fees on account level feature from experimental to general availability
-    - Moved the interest on account level feature from experimental to general availability
-    - Moved the search for a holding from experimental to general availability
-    - Improved the error message in the activities import for csv files
-    - Removed the application version from the client
-    - Allowed to edit today’s historical market data in the asset profile details dialog of the admin control panel
+    - Reverted Nx from version 17.1.3 to 17.0.2
+    - Extended the chart in the account detail dialog by historical cash balances
+    - Improved the error log for a timeout in the data source request
+    - Improved the language localization for German (de)
+    - Upgraded angular from version 16.2.12 to 17.0.4
 
-  Fixed:
-
-    - Fixed the style of the active page in the header navigation
-    - Trimmed text in i18n service to query messages.*.xlf files on the server
-
-  Special Thanks
-
-    @dl90
-    @dtslvr
 
   For full release notes and additional changes from previous versions, please visit: https://github.com/ghostfolio/ghostfolio/releases
 submitter: BeauAgst
