Update heimdall to 2.5.8

--- a/heimdall/docker-compose.yml
+++ b/heimdall/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   server:
-    image: lscr.io/linuxserver/heimdall:2.5.6@sha256:dc4f01cd09a9a2f1dbb9c2029d1300070861355754004ac70b33723bd42ff957
+    image: linuxserver/heimdall:2.5.8@sha256:462bf7fb9d11bbd8ee90924cac613efae85a6f666c371a9bc345386f83cdf404
     volumes:
       - ${APP_DATA_DIR}/config:/config
     environment:
