--- a/heimdall/umbrel-app.yml
+++ b/heimdall/umbrel-app.yml
@@ -3,7 +3,7 @@ id: heimdall
 name: Heimdall
 tagline: Organize your most used web sites in a simple way
 category: files
-version: "2.5.6"
+version: "2.5.8"
 port: 7392
 description: >-
   Heimdall is a dashboard for all your web applications. It doesn't need to be limited to applications though, you can add links to anything you like.
@@ -28,21 +28,19 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >
-  This release updates Heimdall from v2.5.5 to v2.5.6. It includes many bug fixes and performance improvements, as well as the following new features:
+  This release updates Heimdall from v2.5.6 to v2.5.8. It includes many bug fixes and performance improvements, as well as the following new features:
 
-  - fix: Add more error handling for app test
+  - Fix and add SVG support 
 
-  - fix: Update jquery, jquery-ui
+  - Add issue-pr workflows
   
-  - use jquery-sortablejs instead of jquery-ui
+  - Fix sortable tooltip 
 
-  - fix language setting only available in view
+  - Remove register route
   
-  - fix: Route titlecolour error
+  - Add Trianglify background option
 
-  - Update Korean and Chinese language
-
-  - Added Ukrainian translation
+  - Validate icons to be images
 
 
   The full release notes are available at https://github.com/linuxserver/Heimdall/releases
