Update home-assistant to 2023.11.3

--- a/home-assistant/umbrel-app.yml
+++ b/home-assistant/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: home-assistant
 category: automation
 name: Home Assistant
-version: "2023.9.3"
+version: "2023.11.3"
 tagline: Home automation that puts local control & privacy first
 description: >-
   Open source home automation that puts local control and privacy
@@ -38,9 +38,7 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  This release included major updates to climate, humidifier, and water heater dialogs with circular sliders and status indicators.
-  The tile card and template sensor features were expanded, allowing easier control and setup from the dashboard and UI.
-  The onboarding process was also redesigned to simplify the initial Home Assistant experience.
+  This release includes many fixes and new features that can be seen in the 2023.11.3 release notes.
   
   Read more at: https://github.com/home-assistant/core/releases
 submitter: Umbrel
