--- a/jackett/docker-compose.yml
+++ b/jackett/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
-    image: lscr.io/linuxserver/jackett:0.21.1000@sha256:e18a335d79676933b9f3f08ec4aa4b760d991ae59b6f2203da68cac7771aceaf
+    image: linuxserver/jackett:0.21.1289@sha256:abcbb4df3064fd6a0aeb29bbb0be1f7e18be321b1c85009c94f65efdfb399add
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data:/config
