--- a/monero/docker-compose.yml
+++ b/monero/docker-compose.yml
@@ -66,13 +66,13 @@ services:
       default:
         ipv4_address: "${APP_MONERO_TOR_PROXY_IP}"
   
-  i2pd_daemon:
-    image: purplei2p/i2pd:release-2.44.0@sha256:d154a599793c393cf9c91f8549ba7ece0bb40e5728e1813aa6dd4c210aa606f6
-    user: "root"
-    command: --sam.enabled=true --sam.address=0.0.0.0 --sam.port=7656 --loglevel=error
-    restart: on-failure
-    volumes:
-      - ${APP_DATA_DIR}/data/i2pd:/home/i2pd/data
-    networks:
-      default:
-        ipv4_address: "${APP_MONERO_I2P_DAEMON_IP}"
+  # i2pd_daemon:
+  #   image: purplei2p/i2pd:release-2.44.0@sha256:d154a599793c393cf9c91f8549ba7ece0bb40e5728e1813aa6dd4c210aa606f6
+  #   user: "root"
+  #   command: --sam.enabled=true --sam.address=0.0.0.0 --sam.port=7656 --loglevel=error
+  #   restart: on-failure
+  #   volumes:
+  #     - ${APP_DATA_DIR}/data/i2pd:/home/i2pd/data
+  #   networks:
+  #     default:
+  #       ipv4_address: "${APP_MONERO_I2P_DAEMON_IP}"
