Update node-red-standalone to 3.1.1

--- a/node-red-standalone/docker-compose.yml
+++ b/node-red-standalone/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       PROXY_AUTH_WHITELIST: "/public/*"
   
   web:
-    image: nodered/node-red:3.0.2-18@sha256:e401cd81a43bca7db51fe8dac2c9cfc9b4ffb922ba424241280f7392e13b06a0
+    image: nodered/node-red:3.1.1@sha256:cf9749f31fdaee0a87a27aebf97ef6c051e1b6e77f021806f876055ae8d0b4c8
     restart: on-failure
     stop_grace_period: 1m
     volumes:
