--- a/prowlarr/docker-compose.yml
+++ b/prowlarr/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
-    image: linuxserver/prowlarr:0.4.4-nightly@sha256:053efaf2ede2a8e85a960f6db0d6a54e2ca29b13910dc3575eb5a86c686ed302
+    image: linuxserver/prowlarr:1.10.5@sha256:5b458ad23f7d97e5fd9bdbcc733c39c5dcab9d435d8f976d883ed49b41b45f63
     environment:
       - PUID=1000
       - PGID=1000
