Update specter-desktop to 2.0.2

--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: specter-desktop
 category: bitcoin
 name: Specter Desktop
-version: "1.14.5"
+version: "2.0.2"
 tagline: Multisig with hardware wallets made easy
 description: >-
   Specter Desktop connects to the Bitcoin Core running on your Umbrel
@@ -44,10 +44,9 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release updates Specter Desktop to version 1.14.5, which is the latest version that maintains full compatibility
-  with node implementations like the Bitcoin Node app on Umbrel. Compatibility for future versions is on the Specter Desktop
-  development roadmap, and these versions will be brought to Umbrel as soon as they are available!
+  Please create a full backup before migrating. You can easily create a backup in Settings --> Backup Specter (zip file).
 
+  This update takes Specter Desktop from 1.14.5 to 2.0.2.
 
   Full release notes and detailed information is available at https://github.com/cryptoadvance/specter-desktop/releases
 submitter: k9ert
