--- a/esphome/umbrel-app.yml
+++ b/esphome/umbrel-app.yml
@@ -21,6 +21,9 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
+  ⚠️ As usual, please check that your configurations are still working correctly after updating.
+
+  
   This release updates ESPHome from version 2023.2.4 to 2023.11.6. A full list of new features, new component support, breaking changes, and bug fixes for versions 
   between 2023.2.4 and 2023.11.6 can be found here: https://github.com/esphome/esphome/releases.
 
