--- a/esphome/umbrel-app.yml
+++ b/esphome/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: esphome
 category: automation
 name: ESPHome
-version: "2023.2.4"
+version: "2023.11.6"
 tagline: Intelligently manage all your ESP8266/ESP32 devices
 description: >-
   ESPHome is a system to control your ESP8266/ESP32 by simple yet powerful configuration files and control them remotely through Home Automation systems.
@@ -21,17 +21,16 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  This release updates ESPHome from version 2022.6.2 to 2023.2.4. A full list of new features, new component support, breaking changes, and bug fixes for versions 
-  between 2022.6.2 and 2023.2.4 can be found here: https://github.com/esphome/esphome/releases.
+  ⚠️ As usual, please check that your configurations are still working correctly after updating.
+
+  
+  This release updates ESPHome from version 2023.2.4 to 2023.11.6. A full list of new features, new component support, breaking changes, and bug fixes for versions 
+  between 2023.2.4 and 2023.11.6 can be found here: https://github.com/esphome/esphome/releases.
 
 
-  Version 2023.2.4 release notes:
+  Version 2023.11.6 release notes:
 
-  - BL0939 state_class set for energy sensors
-
-  - fix wiegand tag parity
-
-  - Fix multiple remote_receivers with triggers esphome#4477 by @jesserockz
-
+  - Fix write_speaker without speaker in config
+  
 submitter: ShonP40
 submission: https://github.com/getumbrel/umbrel-apps/pull/43
