--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "2.27.1"
+version: "2.28.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,16 +31,23 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This release upgrades Ghostfolio from v2.14.0 to v2.27.1, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
+  This release upgrades Ghostfolio from v2.14.0 to v2.28.0, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
   
+
+  Added:
+
+    - Added a historical cash balances table to the account detail dialog
+    - Introduced a 'HasPermission' annotation for endpoints
+
 
   Changed:
 
-    - Reverted Nx from version 17.1.3 to 17.0.2
-    - Extended the chart in the account detail dialog by historical cash balances
-    - Improved the error log for a timeout in the data source request
-    - Improved the language localization for German (de)
-    - Upgraded angular from version 16.2.12 to 17.0.4
+    - Relaxed the check for duplicates in the preview step of the activities import (allow same day)
+    - Respected the 'withExcludedAccounts' flag in the account balance time series
+  
+
+  Fixed:
+    - Changed the mechanism of the 'INTRADAY' data gathering to operate synchronously avoiding database deadlocks
 
 
   For full release notes and additional changes from previous versions, please visit: https://github.com/ghostfolio/ghostfolio/releases
