update release notes

--- a/n8n/umbrel-app.yml
+++ b/n8n/umbrel-app.yml
@@ -4,42 +4,8 @@ category: automation
 name: n8n
 version: "1.18.1"
 releaseNotes: >-
-  Version Update Highlights (1.9.3 to 1.18.1):
-
-
-  Bug Fixes:
-    - AWS DynamoDB Node: Improve error message parsing.
-  
-    - core: Prevent error messages due to statistics about data loading.
-  
-    - core: Tighten checks for multi-main setup usage.
-  
-    - core: Use AbortController to notify nodes to abort execution.
-  
-    - editor: Disable context menu actions in read-only mode.
-  
-    - editor: Fix cloud plan data loading on instance.
-  
-    - editor: Fix credential icon for old node type version.
-  
-    - editor: Fix icon for unknown node type.
-  
-    - editor: Fix mouse position in workflow previews.
-  
-    - editor: Suppress dev server websocket messages in workflow view.
-  
-    - Google Sheets Node: Fix issue with paired items not being set correctly.
-  
-    - Google Sheets Node: Read operation execute for each item.
-  
-    - HTTP Request Node: Enable expressions for binary input data fields.
-  
-    - Microsoft SQL Node: Prevent double escaping table name.
-  
-    - Notion Node: Fix broken Notion node parameters.
-  
-  
-  Full details for changes made since version 1.9.3 can be found at https://github.com/n8n-io/n8n/blob/master/CHANGELOG.md
+  This release updates n8n from version 1.9.3 to 1.18.1. A full list of new features, performance improvements, and bug fixes for versions 
+  between 1.9.3 to 1.18.1can be found at https://github.com/n8n-io/n8n/blob/master/CHANGELOG.md
 tagline: Build complex workflows, really fast
 description: >-
   n8n is an extendable workflow automation tool. With a fair-code distribution model, n8n will always have visible source code, 
