fix release notes 2023-11-23 --> 2023-11-28

--- a/homebridge/umbrel-app.yml
+++ b/homebridge/umbrel-app.yml
@@ -39,7 +39,7 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  This release uses Homebridge's 2023-11-23 image, and takes it to v1.7.0.
+  This release uses Homebridge's 2023-11-28 image, which takes it to v1.7.0.
 
   Read the full release notes for additional information and detailed changes at https://github.com/homebridge/homebridge/releases
 submitter: Umbrel
