--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -39,12 +39,13 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >
-  Updates Uptime Kuma from version 1.23.3 to 1.23.7
    
-  Warning: Due to the security fix, all login sessions will be logged out, after updated to this version.
+  ⚠️ Due to a security fix in this update, all login sessions will be logged out after updating to this version. 
+  If you are using some unofficial/3rd party tools, you may need to re-generate an auth token.
   
-  Important: If you are using some unofficial/3rd party tools, it could be a breaking change. You may need to re-generate an auth token.
-  
+
+  This release updates Uptime Kuma from version 1.23.3 to 1.23.7.
+
 
   💇‍♀️ Improvements:
   
@@ -68,7 +69,7 @@ releaseNotes: >
 
   - getGameList, testChrome are no longer accessible without login
   
-  
+
   Full changelog for versions 1.23.3 to 1.23.7 can be found here: https://github.com/louislam/uptime-kuma/releases
 submitter: Philipp Haussleiter
 submission: https://github.com/getumbrel/umbrel/pull/1148
