--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -34,9 +34,7 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This release updates Jackett from v0.21.1000 to v0.21.1289. It includes many bug fixes and performance improvements, as well as the following new features:
-
-  The full release notes are available at https://github.com/Jackett/Jackett/releases
+  This release updates Jackett from v0.21.1000 to v0.21.1289. The full release notes are available at https://github.com/Jackett/Jackett/releases.
 permissions:
   - STORAGE_DOWNLOADS
 torOnly: false
